<resources>
    <string name="app_name">SyncReady</string>
    <string name="register_fragment">Registar nova conta</string>
    <string name="app_year">2019</string>
    <string name="User_name">Nome de utilizador</string>
    <string name="User_email">Email</string>
    <string name="FullName">Nome completo</string>
    <string name="Email">E-mail</string>
    <string name="Address">Morada</string>
    <string name="NumCC">Nº Cartão de Cidadão</string>
    <string name="tele">Telemóvel</string>
    <string name="Password">Palavra-passe</string>
    <string name="ConfirmPass">Confirmar palavra-passe</string>
    <string name="Entra_name">Entrar</string>
    <string name="NTemConta">Não tem conta?</string>
    <string name="Regista_name">Registar</string>
    <string name="CriarConta_name">Criar Conta</string>
    <string name="NInscricoes">Número de inscrições:</string>
    <string name="NMensagens">Mensagens enviadas:</string>
    <string name="NGruposAtivos">Grupos ativos:</string>
    <string name="NAvaliacoesAtribuidas">Avaliações:</string>
    <string name="Grupos">10 grupos</string>
    <string name="UltAtividade">Data da última atividade:</string>
    <string name="dataUlt">Segunda-feira, 25 de dezembro de 2019</string>
    <string name="TotalMensagens">Total de mensagens recebidas:</string>
    <string name="NTotal">32000</string>
    <string name="dtCriacao">Data de criação</string>
    <string name="nomedodred">Jorge Penedo da Rocha Calhau</string>
    <string name="userdodred">putojorgecrackudo99</string>
    <string name="NCC">562923192</string>
    <string name="dataC">24/08/2013</string>
    <string name="notifications">Notificações</string>
    <string name="alerts">Alertas</string>
    <string name="edit">Editar</string>
    <string name="enter">Entrar</string>
    <string name="roomAdd">Foi adicionado a uma sala</string>
    <string name="rightNow">Agora mesmo</string>
    <string name="maintenance">A nossa app vai entrar em manutenção...</string>
    <string name="touch">Toque</string>
    <string name="roomName">Nome da sala</string>
    <string name="longText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis mauris urna. Nullam congue luctus nunc, a interdum nisl finibus id. In blandit magna a metus convallis tempus. Donec eget turpis massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas a auctor risus. Sed ut metus neque. Aliquam et ipsum fermentum lacus pellentesque facilisis a eget enim. Nulla finibus massa risus, in ullamcorper ligula tempus a. Nullam nec euismod felis. Fusce consequat, eros eget porta aliquet, augue felis vestibulum massa, sed accumsan orci ex eleifend enim.In semper nulla metus, sed convallis arcu facilisis sed. Donec nec sem sagittis, commodo elit ac, malesuada purus. Nam ultrices ullamcorper eros rutrum malesuada. Fusce in ante augue. Vivamus dapibus fringilla mollis. Mauris vulputate dolor sit amet tellus accumsan interdum. Donec libero lacus, vehicula ut posuere eget, dictum ut nibh. Mauris ornare lorem tempor, venenatis augue a, sagittis erat.Mauris blandit congue congue. Sed sed ipsum et nulla scelerisque pharetra vel non ligula. Vestibulum hendrerit rhoncus urna, sit amet dapibus lorem. Praesent mollis massa a ligula volutpat commodo. Suspendisse ac metus aliquet, rhoncus purus convallis, cursus erat. Quisque vel molestie ex. Pellentesque tristique, augue sed suscipit placerat, libero sem dignissim eros, id gravida orci sapien vel leo. Pellentesque hendrerit, ante a volutpat mattis, ex risus dapibus dui, et ornare purus massa sed mauris. Nulla vehicula luctus arcu, eu aliquet dolor lobortis eu. Donec vel leo et diam viverra feugiat. Nunc purus libero, maximus ac tincidunt nec, consectetur a massa. Vivamus commodo orci sit amet leo vestibulum sagittis. Vestibulum orci magna, bibendum vel lobortis nec, malesuada vel erat. Nulla in elementum metus. sem metus, convallis vitae scelerisque id, pulvinar vitae augue. Aenean vehicula placerat ipsum, in faucibus odio cursus in. Aenean ultrices at risus et lobortis. Proin placerat, neque quis sollicitudin mollis, arcu libero fermentum augue, eu rutrum tortor magna id mi. Sed et luctus nunc. Nunc sit amet lorem et lectus venenatis tempor at sed ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed porta lobortis lorem, ac iaculis lacus imperdiet gravida. Curabitur fermentum tellus elit. Vestibulum justo libero, dapibus a ante in, porttitor feugiat tortor. Proin facilisis porta diam, et rutrum risus maximus quis. Nullam nisl enim, ornare id erat sit amet, commodo mollis massa. Proin convallis, purus vitae sagittis tempus, sapien lectus aliquam enim, sed lobortis sem augue et risus. Vestibulum id finibus nibh, vitae rhoncus neque. Nam quis nisi sit amet mi eleifend dictum ac in ligula. Pellentesque tempor massa eu nisl facilisis pellentesque. Morbi suscipit a felis non pharetra. Mauris vulputate aliquam porttitor. Phasellus scelerisque, magna sit amet ullamcorper volutpat, lorem dui condimentum turpis, non malesuada velit risus auctor libero. Mauris eu lacus ut nulla tempus rhoncus.</string>
</resources>
