<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorCard"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:minHeight="140dp"
        android:elevation="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/txtNInscricoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NInscricoes"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtNGrupos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/Grupos"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtUAtividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/UltAtividade"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txtdataAtividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/dataUlt"
                android:textSize="14sp" />
        </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>